# gh-search

./: Cargo.toml  Dockerfile  Gemfile  LICENSE.txt  Makefile  README.md  gh-search-0.1.0.gem  gh_search.gemspec
lib/: gh_search.rb
lib/gh_search/: cli.rb  formatters.rb  github_client.rb  version.rb
lib/gh_search/formatters/: base.rb  csv.rb  json.rb  plain.rb
spec/: gh_search_spec.rb  spec_helper.rb
src/: gh_client.rs  main.rs
